<resources>
    <string name="app_name">Sonuz Oven</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="drawer_name">Welcome</string>
    <string name="add_cake">Add Cake</string>
    <string name="home">Home</string>
    <string name="order_status">Order Status</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>

    <string-array name="userType">
        <item>User</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cakes">Cakes</string>


</resources>