<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home">
        <menu>
            <item
                android:id="@+id/viewCakes"
                android:icon="@drawable/cake"
                android:title="@string/cakes" />
            <item
                android:id="@+id/addCake"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/add_cake" />
            <item
                android:id="@+id/ostatus"
                android:icon="@drawable/ic_baseline_show_chart_24"
                android:title="@string/order_status" />
        </menu>

    </item>

    <item android:title="@string/profile">

        <menu>
            <item
                android:id="@+id/account"
                android:icon="@drawable/ic_baseline_account_circle_24"
                android:title="@string/account" />
            <item
                android:id="@+id/cPassword"
                android:icon="@drawable/ic_baseline_security_24"
                android:title="@string/change_password" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_baseline_power_settings_new_24"
                android:title="@string/logout" />
        </menu>


    </item>



</menu>